Fix on multisite

--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-details/blueprints-e-details.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-details/blueprints-e-details.component.html
@@ -3,9 +3,10 @@
     <span style="margin-left: 15px;"><h1 class="mat-h1">Experiment Blueprint Details</h1></span>
 </mat-toolbar>
 <div class="bleds-container" >
-    <div fxFlex="100%" fxLayout.xs="column" fxLayout="column" fxLayoutAlign="center center" style="   margin-left: 10%;
+    <div fxFlex="100%" fxLayout.xs="column" fxLayout="column" fxLayoutAlign="center center" style="margin-left: 10%;
     margin-right: 10%;
-    width: 90%">
+    width: 90%;
+    padding-bottom: 5%;">
     <table mat-table class="full-width-table bleds-table" matSort aria-label="Elements">
         <!-- KEY Column -->
         <ng-container matColumnDef="key">
