--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.html
@@ -32,16 +32,16 @@
     </mat-step>
     <mat-step [stepControl]="firstFormGroup">
         <form [formGroup]="firstFormGroup" class="data-form" >
-       
+
             <ng-template matStepLabel>VSB Selection</ng-template>
- 
+
             <mat-form-field class="data-full-width">
                 <input type="text"
                        placeholder="Select Blueprint"
                        aria-label="Number"
                        matInput
                        [formControl]="myControl"
-                       
+
                        [matAutocomplete]="auto"
                        style="cursor: pointer;">
                 <mat-autocomplete #auto="matAutocomplete">
@@ -64,7 +64,7 @@
                                 </mat-option>
                             </div>
                             </mat-select>
-                        </mat-form-field>  
+                        </mat-form-field>
                     </div>
                 </div>
                 -->
@@ -80,9 +80,9 @@
                             </mat-option>
                         </div>
                         </mat-select>
-                    </mat-form-field>  
+                    </mat-form-field>
             </div>
-          
+
 
                 <!--
               <div *ngFor="let blue of bluePrintsAssosiate">
@@ -95,7 +95,7 @@
                     </mat-select>
                 </mat-form-field>
               </div>
-          
+
             <mat-form-field appearance="outline" class="data-full-width">
                 <mat-label>Site</mat-label>
                 <mat-select formControlName="selectSiteCtrl" name="site" (selectionChange)="onSiteSelected($event);">
@@ -119,14 +119,14 @@
             <div *ngIf="interSite">
                 <p> Selected Sites: </p>
                 <div style="color: black;" *ngFor="let st of selectedSites">
-                    <p style="margin-bottom: 3px;">{{st}}</p> 
+                    <p style="margin-bottom: 3px;">{{st}}</p>
                  </div>
             </div>
             <div *ngIf="!interSite" style="color: black;">
                 <p> Selected Site: {{selectedSite}}</p>
-                
-            </div>   
-  
+
+            </div>
+
             <p style="margin-top: 5px;"> Selected VSB: {{selectedVsb}}</p>
         </div>
             <div class="margin-top">
@@ -147,33 +147,34 @@
     <mat-step [stepControl]="secondFormGroup">
         <form [formGroup]="secondFormGroup" class="data-form">
             <ng-template matStepLabel>CB Selection</ng-template>
+            <mat-checkbox-group style="margin-bottom: 20px;" >
+              <mat-checkbox (change)="disableCtxb($event);" class="margin-top" style="color: black;" id="noCtx" formControlName="selectNoCbsCtrl">No Context Blueprints</mat-checkbox>
+            </mat-checkbox-group>
             <div *ngIf="interSite">
-                <div *ngFor="let vsbas of bluePrintsAssosiate">
-                    <mat-checkbox (change)="disableCtxb($event);" style="color: black;display: none" id="noCtx" formControlName="selectNoCbsCtrl">No Context Blueprints</mat-checkbox>
-                    <mat-checkbox-group style="margin-bottom: 20px;" *ngFor="let cb of filterCtxbsInSite(selectedSiteArr[vsbas.associatedVsbId]); let i=index" class="flex-column"  id="ctxbChoise">
-                       <b style="color: black;">{{vsbas.associatedVsbId}} : </b>  
-                       <mat-checkbox [value]="cb.value" class="margin-top" style="color: black;" (change)="onSelectedCb($event)" formControlName="selectCbsCtrl">{{cb.viewValue}}</mat-checkbox>
+              <div *ngFor="let vsbas of bluePrintsAssosiate">
+                    <b class="margin-top" style="color: black;">{{vsbas.componentId}}</b>
+                    <mat-checkbox-group style="margin-bottom: 20px;" *ngFor="let cb of filterCtxbsInSite(vsbas.compatibleSite);" class="flex-column"  id="ctxbChoise">
+                        <mat-checkbox [value]="cb.value" class="margin-top" style="color: black;" (change)="onSelectedCb($event, cb.value, vsbas.componentId)" formControlName="selectCbsCtrl">{{cb.viewValue}}</mat-checkbox>
                     </mat-checkbox-group>
                 </div>
             </div>
             <div *ngIf="!interSite">
-                <mat-checkbox (change)="disableCtxb($event);" style="color: black;" id="noCtx" formControlName="selectNoCbsCtrl">No Context Blueprints</mat-checkbox>
                 <mat-checkbox-group  *ngFor="let cb of filterCtxbsInSite(null); let i=index" class="flex-column"  id="ctxbChoise">
-                    <mat-checkbox  [value]="cb.value" (change)="onSelectedCb($event)" class="margin-top" style="color: black;" formControlName="selectCbsCtrl">{{cb.viewValue}}</mat-checkbox>
+                    <mat-checkbox  [value]="cb.value" (change)="onSelectedCb($event, cb.value,null)" class="margin-top" style="color: black;" formControlName="selectCbsCtrl">{{cb.viewValue}}</mat-checkbox>
                 </mat-checkbox-group>
-            </div>           
+            </div>
             <div class="margin-top"></div>
             <p> Blueprint Name: {{expBlueprintName}}</p>
             <div *ngIf="interSite">
                 <p> Selected Sites: </p>
                 <div style="color: black;" *ngFor="let st of selectedSites">
-                    <p style="margin-bottom: 3px;">{{st}}</p> 
+                    <p style="margin-bottom: 3px;">{{st}}</p>
                  </div>
             </div>
             <div *ngIf="!interSite" style="color: black;">
                 <p> Selected Site: {{selectedSite}}</p>
-                
-            </div>            
+
+            </div>
             <p> Selected VSB: {{selectedVsb}}</p>
             <p> Selected CBs: {{selectedCbs.join(', ')}}</p>
             <div class="margin-top">
@@ -197,7 +198,7 @@
                 <label class="input-label" style="width: 200px;margin-top: 20px;margin-bottom: 20px;">Nested NSDs :</label>
                 <br style="margin-bottom: 30px;">
                 <div *ngFor="let vsbas of bluePrintsAssosiate" style="margin-top: 20px;">
-                    <label for="nsd" class="input-label"  style="width: 200px;" > NSD For {{vsbas.associatedVsbId}} (Optional) </label>
+                    <label for="nsd" class="input-label"  style="width: 200px;" > NSD For {{vsbas.componentId}} (Optional) </label>
                     <input type="file" #nsdFiles required (change)="onUploadedNsd($event,nsdFiles.files,vsbas.componentId,'optional')" style="color: black;margin-bottom: 20px" />
                 </div>
             </div>
@@ -210,12 +211,12 @@
             <div *ngIf="interSite">
                 <p> Selected Sites: </p>
                 <div style="color: black;" *ngFor="let st of selectedSites">
-                    <p style="margin-bottom: 3px;">{{st}}</p> 
+                    <p style="margin-bottom: 3px;">{{st}}</p>
                  </div>
             </div>
             <div *ngIf="!interSite" style="color: black;">
                 <p> Selected Site: {{selectedSite}}</p>
-            </div>               
+            </div>
             <p> Selected CBs: {{selectedCbs.join(', ')}}</p>
             <p> Uploaded NSD: {{uploadedNsdName}}</p>
             <div class="margin-top">
@@ -276,11 +277,11 @@
                                             {{param.parameterId}}
                                         </mat-option>
                                     </mat-select>
-                                </mat-form-field> 
+                                </mat-form-field> -->
                                 <mat-form-field appearance="outline" color=primary class="invisible rules-full-width" >
                                   <input matInput placeholder="{{this.translationParams[i]}}" [ngModel]="this.translationParams[i]" formControlName="parameterId" >
                                 </mat-form-field>
-                                -->
+
                             </td>
                             <td>
                                 <mat-form-field appearance="outline" color=primary class="rules-full-width">
@@ -302,12 +303,12 @@
             <div *ngIf="interSite">
                 <p> Selected Sites: </p>
                 <div style="color: black;" *ngFor="let st of selectedSites">
-                    <p style="margin-bottom: 3px;">{{st}}</p> 
+                    <p style="margin-bottom: 3px;">{{st}}</p>
                  </div>
             </div>
             <div *ngIf="!interSite" style="color: black;">
                 <p> Selected Site: {{selectedSite}}</p>
-            </div>              
+            </div>
             <p> Selected VSB: {{selectedVsb}}</p>
             <p> Selected CBs: {{selectedCbs.join(', ')}}</p>
             <p> Uploaded NSD: {{uploadedNsdName}}</p>
@@ -392,7 +393,7 @@
                             <td fxFlex="33%"  fxLayout.xs="column" fxLayout="column" fxLayoutAlign="center center">
                                     <mat-form-field appearance="outline" class="data-full-width">
                                         <mat-label>Target Site</mat-label>
-                                       
+
                                         <mat-select formControlName="metricSelectSite" name="site">
                                             <div *ngFor="let site of sites">
                                             <mat-option *ngIf="selectedSites.includes(site.value)" [value]="site.value">
@@ -400,13 +401,13 @@
                                             </mat-option>
                                             </div>
                                         </mat-select>
-                                    
+
                                     </mat-form-field>
                                 </td>
                                 <td></td>
                                 <td></td>
                             </tr>
-     
+
                     </div>
                 </div>
                 <tr>
@@ -505,12 +506,12 @@
             <div *ngIf="interSite">
                 <p> Selected Sites: </p>
                 <div style="color: black;" *ngFor="let st of selectedSites">
-                    <p style="margin-bottom: 3px;">{{st}}</p> 
+                    <p style="margin-bottom: 3px;">{{st}}</p>
                  </div>
             </div>
             <div *ngIf="!interSite" style="color: black;">
                 <p> Selected Site: {{selectedSite}}</p>
-            </div>               
+            </div>
             <p> Selected VSB: {{selectedVsb}}</p>
             <p> Selected CBs: {{selectedCbs.join(', ')}}</p>
             <p> Uploaded NSD: {{uploadedNsdName}}</p>
