--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-ec-stepper/blueprints-ec-stepper.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-ec-stepper/blueprints-ec-stepper.component.html
@@ -78,6 +78,9 @@
                                   <input matInput placeholder="{{this.translationParams[i]}}" [ngModel]="this.translationParams[i]" formControlName="parameterId" >
                                 </mat-form-field>
                                 -->
+                              <mat-form-field appearance="outline" color=primary class="invisible rules-full-width" >
+                                <input matInput placeholder="{{this.translationParams[i]}}" [ngModel]="this.translationParams[i]" formControlName="parameterId" >
+                              </mat-form-field>
                             </td>
                             <td fxFlex="100%"  fxLayout.xs="column" fxLayout="row" fxLayoutAlign="center center">
                                 <mat-form-field appearance="outline" color=primary class="rules-full-width">
