--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-vs-details/blueprints-vs-details.component.html
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-vs-details/blueprints-vs-details.component.html
@@ -3,7 +3,7 @@
     <span style="margin-left: 15px;"><h1 class="mat-h1">Vertical Service Blueprint Details</h1></span>
 </mat-toolbar>
 <div class="bvsd-container" >
-    <div  fxFlex.gt-sm="50%" fxLayout.xs="row" fxLayout="column" fxLayoutAlign="center center">
+    <div fxFlex.gt-md="50%" fxLayout.xs="row" fxLayout="column" fxLayoutAlign="center center">
         <table mat-table matSort aria-label="Elements" class="full-width-table bvsd-table" >
             <!-- KEY Column -->
             <ng-container matColumnDef="key">
@@ -21,8 +21,9 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
+
 <div style="display: none;visibility: hidden;">
-        <mat-paginator #paginator 
+        <mat-paginator #paginator
             [length]="dataSource?.data.length"
             [pageIndex]="0"
             [pageSize]="50"
@@ -30,13 +31,13 @@
             class="bvsd-table"
             >
         </mat-paginator>
-    </div>
+</div>
 
-<div  fxFlex.gt-sm="50%"  fxLayout="column" fxLayoutAlign="center center">
+<div  fxFlex.gt-sm="50%" fxLayout="column" fxLayoutAlign="center center">
     <div style="width: 100%;height:100%" >
         <app-blueprints-graph [elements]="vsbDetailservice.graphData"   (select)="nodeChange($event)"></app-blueprints-graph>
     </div>
-    <div fxFlex="100%" fxLayout="column" fxLayoutAlign="center center"><p style="color: black;"><b >Selected Node: </b>{{node_name}}</p></div> 
+    <div fxFlex="100%" fxLayout="column" fxLayoutAlign="center center"><p style="color: black;"><b >Selected Node: </b>{{node_name}}</p></div>
 
 </div>
 
