--- a/eve-catalogue-gui/src/app/experiments/experiments.component.html
+++ b/eve-catalogue-gui/src/app/experiments/experiments.component.html
@@ -53,12 +53,12 @@
     <ng-container  matColumnDef="buttons">
         <th fxShow.xs="false" mat-header-cell *matHeaderCellDef></th>
         <td fxShow.xs="false" mat-cell *matCellDef="let row" style="text-align: left;">
-            <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">              
+            <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
               <mat-button-toggle style="background-color: #b3b3b3;" value="instantiate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && ((row.status).indexOf('READY') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0);" (click)="openExecDialog(row.experimentId, row.status, row.experimentDescriptorId);"><mat-icon>launch</mat-icon></mat-button-toggle>
               <!--mat-button-toggle value="activate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && (row.status).indexOf('INSTANTIATED') >= 0;"><mat-icon>play_arrow</mat-icon></mat-button-toggle-->
               <!--mat-button-toggle value="monitor" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0;"><mat-icon>network_check</mat-icon></mat-button-toggle-->
               <!-- <mat-button-toggle value="results" *ngIf="(row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0;" (click)="openResultsDialog(row.experimentId, row.status, row.executions);"><mat-icon>multiline_chart</mat-icon></mat-button-toggle> -->
-              <mat-button-toggle style="background-color: #b3b3b3;" value="manage" *ngIf="getRole().indexOf('SITE_MANAGER') >= 0 && ((row.status).indexOf('SCHEDULING') >= 0 || (row.status).indexOf('ACCEPTED') >= 0);" (click)="openMgmtDialog(row.experimentId, row.status);"><mat-icon>build</mat-icon></mat-button-toggle>
+              <mat-button-toggle style="background-color: #b3b3b3;" value="manage" *ngIf="getRole().indexOf('SITE_MANAGER') >= 0 && ((row.status).indexOf('SCHEDULING') >= 0 || (row.status).indexOf('ACCEPTED') >= 0);" (click)="openMgmtDialog(row.experimentId, row.status, row.perfDiag);"><mat-icon>build</mat-icon></mat-button-toggle>
               <mat-button-toggle style="background-color: #b3b3b3;" value="view_descriptor" (click)="viewExperiment(row.experimentId)"><mat-icon>remove_red_eye</mat-icon></mat-button-toggle>
               <mat-button-toggle style="background-color: #b3b3b3;" value="view_metrics" *ngIf="((row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('FAILED') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0 || (row.status).indexOf('RUNNING_EXECUTION') >= 0);" (click)="viewMetrics(row.experimentId)"><mat-icon>multiline_chart</mat-icon></mat-button-toggle>
               <mat-button-toggle style="background-color: #b3b3b3;" value="delete" *ngIf="((row.status).indexOf('READY') >= 0 || (row.status).indexOf('TERMINATED') >= 0 || (row.status).indexOf('FAILED') >= 0 || (row.status).indexOf('REFUSED') >= 0)  || ( getRole().indexOf('EXPERIMENTER') >= 0);" (click)="deleteExperiment(row.experimentId)"><mat-icon>delete_forever</mat-icon></mat-button-toggle>
@@ -80,4 +80,3 @@
   </mat-paginator>
 </div>
 </div>
-    
