--- a/eve-catalogue-gui/src/app/experiments/experiments.component.html
+++ b/eve-catalogue-gui/src/app/experiments/experiments.component.html
@@ -23,6 +23,11 @@
       <td mat-cell *matCellDef="let row"><b>{{row.experimentId}}</b></td>
     </ng-container>
 
+    <!-- Name column-->
+    <ng-container matColumnDef="name">
+      <th fxShow.xs="false" mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let row"><b>{{row.name}}</b></td>
+    </ng-container>
     <!-- ExpD Id Column -->
     <ng-container matColumnDef="experimentDescriptorId">
       <th fxShow.xs="false" mat-header-cell *matHeaderCellDef mat-sort-header>Descriptor Id</th>
@@ -53,7 +58,7 @@
     <ng-container  matColumnDef="buttons">
         <th fxShow.xs="false" mat-header-cell *matHeaderCellDef></th>
         <td fxShow.xs="false" mat-cell *matCellDef="let row" style="text-align: left;">
-            <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">              
+            <mat-button-toggle-group name="operations" aria-label="Operations" class="margin-all">
               <mat-button-toggle style="background-color: #b3b3b3;" value="instantiate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && ((row.status).indexOf('READY') >= 0 || (row.status).indexOf('INSTANTIATED') >= 0);" (click)="openExecDialog(row.experimentId, row.status, row.experimentDescriptorId);"><mat-icon>launch</mat-icon></mat-button-toggle>
               <!--mat-button-toggle value="activate" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0 && (row.status).indexOf('INSTANTIATED') >= 0;"><mat-icon>play_arrow</mat-icon></mat-button-toggle-->
               <!--mat-button-toggle value="monitor" *ngIf="getRole().indexOf('EXPERIMENTER') >= 0;"><mat-icon>network_check</mat-icon></mat-button-toggle-->
@@ -80,4 +85,3 @@
   </mat-paginator>
 </div>
 </div>
-    
